examples/counter/tests/snapshots/counter__counter_incremented.snap
---
source: examples/counter/tests/counter.rs
expression: app.frame()
---
Count: 1        
                
Increment       
                
Quit
