examples/counter/tests/snapshots/counter__counter_initial.snap
---
source: examples/counter/tests/counter.rs
expression: app.frame()
---
Count: 0        
                
Increment       
                
Quit
